--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "dotenv-expand": "^10.0.0",
     "JSONStream": "^1.3.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
